# epimystic-lab

./: .gitignore  README.md
projects/: README.md
projects/2026-06-29_jsonlcheck/: LICENSE  README.md  project.json  pyproject.toml
projects/2026-06-29_jsonlcheck/jsonlcheck/: __init__.py  __main__.py  core.py
projects/2026-06-29_jsonlcheck/tests/: test_cli.py  test_core.py
projects/2026-06-29_seedline/: README.md  project.json  pyproject.toml
projects/2026-06-29_seedline/seedline/: __init__.py  core.py  pytest_plugin.py
projects/2026-06-29_seedline/tests/: test_core.py
research-radar/: 2026-06-29.md  README.md
