[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonlcheck"
version = "0.1.0"
description = "Strict streaming JSONL validator with line:column diagnostics."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["jsonl", "json", "validator", "linter", "ndjson"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.scripts]
jsonlcheck = "jsonlcheck.__main__:main"

[tool.setuptools.packages.find]
include = ["jsonlcheck*"]
exclude = ["tests*"]
