[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seedline"
version = "0.1.0"
description = "Deterministic seed locking for ML/LLM tests across random, NumPy, and PyTorch."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["seed", "rng", "reproducibility", "deterministic", "pytest", "numpy", "pytorch"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
torch = ["torch>=1.12"]

[project.entry-points.pytest11]
seedline = "seedline.pytest_plugin"

[tool.setuptools.packages.find]
include = ["seedline*"]
exclude = ["tests*"]
